--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 .container{
     margin:auto;
-    width:auto;
+    width: 300px;
     border: 1px solid black;
     padding: 10px;
     display: inline-block;
